test/parse/bad-string-escape.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func) (export "foobar\x\n" (func 0)))
(;; STDERR ;;;
out/test/parse/bad-string-escape.txt:3:31: error: bad escape "\x"
(module (func) (export "foobar\x\n" (func 0)))
                              ^^
;;; STDERR ;;)
